# biopsy

./: .gitignore  AGENTS.md  README.md  demo.tape  pyproject.toml
.github/workflows/: ci.yml
assets/: hero.html
docs/: architecture.md  gotchas.md
src/biopsy/: __init__.py  action_plan.py  cli.py  clustering.py  compare.py  correlations.py  demo.py  findings.py  inference.py  io.py  matrix.py  profile.py  serialize.py  sparkline.py  stats.py  targets.py  temporal.py
src/biopsy/cli/: __init__.py  common.py  compare_cmd.py  config.py  demo_cmd.py  diff_cmd.py  doctor_cmd.py  init_cmd.py  notebook.py  profile_cmd.py
src/biopsy/profile/: __init__.py  diff.py  model.py  run.py  serde.py
src/biopsy/render/: __init__.py  charts.py  html.py  terminal.py
src/biopsy/templates/: compare.html.j2  report.html.j2
src/biopsy/warehouse/: __init__.py  _base.py  bigquery.py  doctor.py  object_store.py  postgres.py  snowflake.py
src/sketch/: __init__.py  cli.py  clustering.py  correlations.py  demo.py  findings.py  io.py  profile.py  serialize.py  sparkline.py  stats.py  temporal.py
src/sketch/render/: html.py  terminal.py
src/sketch/templates/: report.html.j2
tests/: conftest.py  docker-compose.postgres.yml  test_action_plan.py  test_cli.py  test_compare.py  test_correlations.py  test_filter_and_io.py  test_findings_quality.py  test_profile_pipeline.py  test_render.py  test_smoke.py  test_temporal.py  test_warehouse.py  test_warehouse_bigquery.py  test_warehouse_postgres.py  test_warehouse_readonly.py  test_warehouse_snowflake.py
tests/fixtures/: postgres_seed.sql
