[project]
name = "biopsy"
version = "0.1.0"
description = "Instant, opinionated EDA in the terminal."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Adam Thuvesen" }]
license = { text = "MIT" }
dependencies = [
    "duckdb>=1.1.0",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "scipy>=1.11",
    "typer>=0.12",
    "rich>=13.7",
    "plotly>=5.20",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dataframe = ["pandas>=2.0", "polars>=0.20", "pyarrow>=15"]
dev = [
    "pandas>=2.0",
    "polars>=0.20",
    "pyarrow>=15",
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
biopsy = "biopsy.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/biopsy"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/biopsy/cli.py" = ["B008"]
