[project]
name = "biopsy"
version = "0.1.0"
description = "Opinionated, ranked EDA for the first pass before training a model."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Adam Thuvesen" }]
license = { text = "MIT" }
dependencies = [
    "duckdb>=1.1.0",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "scipy>=1.11",
    "typer>=0.12",
    "rich>=13.7",
    "plotly>=5.20",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dataframe = ["pandas>=2.0", "polars>=0.20", "pyarrow>=15"]
# Warehouse sources — all optional. Default install pulls no warehouse deps.
# Object stores (S3/HTTPS/GCS) and Postgres use DuckDB's built-in extensions
# (installed on first use), so their extras are empty.
object-store = []
postgres = []
snowflake = ["snowflake-connector-python>=3.7", "pyarrow>=15"]
bigquery = ["google-cloud-bigquery>=3.20", "pyarrow>=15"]
warehouse = ["biopsy[snowflake,bigquery,postgres,object-store]"]
dev = [
    "mypy>=2.2.0",
    "pandas>=2.0",
    "polars>=0.20",
    "pyarrow>=15",
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
biopsy = "biopsy.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/biopsy"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/biopsy/cli/*.py" = ["B008"]

[tool.mypy]
python_version = "3.11"
files = ["src/biopsy"]
check_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
warn_unused_ignores = true
show_error_codes = true
